fix: Fix Spring Boot VS Code identifier

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,7 @@
   "recommendations": [
     "runem.lit-plugin",
     "vscjava.vscode-java-pack",
-    "pivotal.vscode-spring-boot"
+    "vmware.vscode-spring-boot"
   ],
   "unwantedRecommendations": []
 }
