--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>24.0.0</vaadin.version>
+        <vaadin.version>24.1-SNAPSHOT</vaadin.version>
         <selenium.version>4.8.1</selenium.version>
+        <vaadin.frontend.hotdeploy>false</vaadin.frontend.hotdeploy>
     </properties>
 
     <parent>
@@ -69,6 +70,13 @@
         <dependencies>
             <dependency>
                 <groupId>com.vaadin</groupId>
+                <artifactId>flow-bom</artifactId>
+                <version>${vaadin.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-bom</artifactId>
                 <version>${vaadin.version}</version>
                 <type>pom</type>
@@ -118,6 +126,9 @@
                      the default Spring Boot's 30sec timeout.  -->
                 <configuration>
                     <jvmArguments>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</jvmArguments>
+                    <systemPropertyVariables>
+                        <vaadin.frontend.hotdeploy>${vaadin.frontend.hotdeploy}</vaadin.frontend.hotdeploy>
+                    </systemPropertyVariables>
                     <wait>500</wait>
                     <maxAttempts>240</maxAttempts>
                 </configuration>
