--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,14 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>24.1.0.alpha6</vaadin.version>
+        <vaadin.version>24.1.0.beta2</vaadin.version>
         <selenium.version>4.8.3</selenium.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.6</version>
+        <version>3.1.0</version>
     </parent>
 
     <repositories>
