--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.9</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
