--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <java.version>1.8</java.version>
         <vaadin.version>22.1.1</vaadin.version>
+        <selenium.version>3.141.59</selenium.version>
     </properties>
 
     <parent>
