--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,13 @@
     <properties>
         <java.version>1.8</java.version>
         <vaadin.version>22.1.1</vaadin.version>
+        <selenium.version>3.141.59</selenium.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.6</version>
+        <version>2.7.14</version>
     </parent>
 
     <repositories>
@@ -120,7 +121,19 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>4.4.0</version>
+            <version>5.0.3</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.java.dev.jna</groupId>
+                    <artifactId>jna</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.9</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
