--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "no-name",
   "license": "UNLICENSED",
   "dependencies": {
+    "@polymer/iron-a11y-announcer": "3.0.2",
     "@polymer/iron-icon": "3.0.1",
+    "@polymer/iron-iconset-svg": "3.0.1",
     "@polymer/iron-list": "3.1.0",
+    "@polymer/iron-media-query": "3.0.1",
+    "@polymer/iron-meta": "3.0.1",
+    "@polymer/iron-resizable-behavior": "3.0.1",
     "@polymer/polymer": "3.2.0",
     "@vaadin/accordion": "22.1.0",
     "@vaadin/app-layout": "22.1.0",
@@ -16,6 +21,7 @@
     "@vaadin/checkbox-group": "22.1.0",
     "@vaadin/combo-box": "22.1.0",
     "@vaadin/common-frontend": "0.0.17",
+    "@vaadin/component-base": "22.1.0",
     "@vaadin/confirm-dialog": "22.1.0",
     "@vaadin/context-menu": "22.1.0",
     "@vaadin/cookie-consent": "22.1.0",
@@ -26,6 +32,7 @@
     "@vaadin/details": "22.1.0",
     "@vaadin/dialog": "22.1.0",
     "@vaadin/email-field": "22.1.0",
+    "@vaadin/field-base": "22.1.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "0.0.17",
     "@vaadin/form-layout": "22.1.0",
@@ -35,6 +42,7 @@
     "@vaadin/horizontal-layout": "22.1.0",
     "@vaadin/icon": "22.1.0",
     "@vaadin/icons": "22.1.0",
+    "@vaadin/input-container": "22.1.0",
     "@vaadin/integer-field": "22.1.0",
     "@vaadin/item": "22.1.0",
     "@vaadin/list-box": "22.1.0",
@@ -49,7 +57,7 @@
     "@vaadin/progress-bar": "22.1.0",
     "@vaadin/radio-group": "22.1.0",
     "@vaadin/rich-text-editor": "22.1.0",
-    "@vaadin/router": "1.7.4",
+    "@vaadin/router": "1.7.5",
     "@vaadin/scroller": "22.1.0",
     "@vaadin/select": "22.1.0",
     "@vaadin/split-layout": "22.1.0",
@@ -75,6 +83,7 @@
     "@vaadin/vaadin-date-picker": "22.1.0",
     "@vaadin/vaadin-date-time-picker": "22.1.0",
     "@vaadin/vaadin-details": "22.1.0",
+    "@vaadin/vaadin-development-mode-detector": "2.0.6",
     "@vaadin/vaadin-dialog": "22.1.0",
     "@vaadin/vaadin-form-layout": "22.1.0",
     "@vaadin/vaadin-grid": "22.1.0",
@@ -83,6 +92,7 @@
     "@vaadin/vaadin-icons": "22.1.0",
     "@vaadin/vaadin-item": "22.1.0",
     "@vaadin/vaadin-list-box": "22.1.0",
+    "@vaadin/vaadin-list-mixin": "22.1.0",
     "@vaadin/vaadin-login": "22.1.0",
     "@vaadin/vaadin-lumo-styles": "22.1.0",
     "@vaadin/vaadin-material-styles": "22.1.0",
@@ -90,6 +100,7 @@
     "@vaadin/vaadin-messages": "22.1.0",
     "@vaadin/vaadin-notification": "22.1.0",
     "@vaadin/vaadin-ordered-layout": "22.1.0",
+    "@vaadin/vaadin-overlay": "22.1.0",
     "@vaadin/vaadin-progress-bar": "22.1.0",
     "@vaadin/vaadin-radio-button": "22.1.0",
     "@vaadin/vaadin-rich-text-editor": "22.1.0",
@@ -97,13 +108,16 @@
     "@vaadin/vaadin-shrinkwrap": "22.1.2",
     "@vaadin/vaadin-split-layout": "22.1.0",
     "@vaadin/vaadin-tabs": "22.1.0",
+    "@vaadin/vaadin-template-renderer": "22.1.0",
     "@vaadin/vaadin-text-field": "22.1.0",
     "@vaadin/vaadin-themable-mixin": "22.1.0",
     "@vaadin/vaadin-time-picker": "22.1.0",
     "@vaadin/vaadin-upload": "22.1.0",
+    "@vaadin/vaadin-usage-statistics": "2.1.2",
     "@vaadin/vaadin-virtual-list": "22.1.0",
     "@vaadin/vertical-layout": "22.1.0",
     "@vaadin/virtual-list": "22.1.0",
+    "@webcomponents/shadycss": "1.9.6",
     "construct-style-sheets-polyfill": "3.0.4",
     "date-fns": "2.29.3",
     "lit": "2.0.0"
@@ -136,8 +150,13 @@
   },
   "vaadin": {
     "dependencies": {
+      "@polymer/iron-a11y-announcer": "3.0.2",
       "@polymer/iron-icon": "3.0.1",
+      "@polymer/iron-iconset-svg": "3.0.1",
       "@polymer/iron-list": "3.1.0",
+      "@polymer/iron-media-query": "3.0.1",
+      "@polymer/iron-meta": "3.0.1",
+      "@polymer/iron-resizable-behavior": "3.0.1",
       "@polymer/polymer": "3.2.0",
       "@vaadin/accordion": "22.1.0",
       "@vaadin/app-layout": "22.1.0",
@@ -150,6 +169,7 @@
       "@vaadin/checkbox-group": "22.1.0",
       "@vaadin/combo-box": "22.1.0",
       "@vaadin/common-frontend": "0.0.17",
+      "@vaadin/component-base": "22.1.0",
       "@vaadin/confirm-dialog": "22.1.0",
       "@vaadin/context-menu": "22.1.0",
       "@vaadin/cookie-consent": "22.1.0",
@@ -160,6 +180,7 @@
       "@vaadin/details": "22.1.0",
       "@vaadin/dialog": "22.1.0",
       "@vaadin/email-field": "22.1.0",
+      "@vaadin/field-base": "22.1.0",
       "@vaadin/form": "0.0.17",
       "@vaadin/form-layout": "22.1.0",
       "@vaadin/fusion-frontend": "0.0.17",
@@ -168,6 +189,7 @@
       "@vaadin/horizontal-layout": "22.1.0",
       "@vaadin/icon": "22.1.0",
       "@vaadin/icons": "22.1.0",
+      "@vaadin/input-container": "22.1.0",
       "@vaadin/integer-field": "22.1.0",
       "@vaadin/item": "22.1.0",
       "@vaadin/list-box": "22.1.0",
@@ -182,7 +204,7 @@
       "@vaadin/progress-bar": "22.1.0",
       "@vaadin/radio-group": "22.1.0",
       "@vaadin/rich-text-editor": "22.1.0",
-      "@vaadin/router": "1.7.4",
+      "@vaadin/router": "1.7.5",
       "@vaadin/scroller": "22.1.0",
       "@vaadin/select": "22.1.0",
       "@vaadin/split-layout": "22.1.0",
@@ -208,6 +230,7 @@
       "@vaadin/vaadin-date-picker": "22.1.0",
       "@vaadin/vaadin-date-time-picker": "22.1.0",
       "@vaadin/vaadin-details": "22.1.0",
+      "@vaadin/vaadin-development-mode-detector": "2.0.6",
       "@vaadin/vaadin-dialog": "22.1.0",
       "@vaadin/vaadin-form-layout": "22.1.0",
       "@vaadin/vaadin-grid": "22.1.0",
@@ -216,6 +239,7 @@
       "@vaadin/vaadin-icons": "22.1.0",
       "@vaadin/vaadin-item": "22.1.0",
       "@vaadin/vaadin-list-box": "22.1.0",
+      "@vaadin/vaadin-list-mixin": "22.1.0",
       "@vaadin/vaadin-login": "22.1.0",
       "@vaadin/vaadin-lumo-styles": "22.1.0",
       "@vaadin/vaadin-material-styles": "22.1.0",
@@ -223,6 +247,7 @@
       "@vaadin/vaadin-messages": "22.1.0",
       "@vaadin/vaadin-notification": "22.1.0",
       "@vaadin/vaadin-ordered-layout": "22.1.0",
+      "@vaadin/vaadin-overlay": "22.1.0",
       "@vaadin/vaadin-progress-bar": "22.1.0",
       "@vaadin/vaadin-radio-button": "22.1.0",
       "@vaadin/vaadin-rich-text-editor": "22.1.0",
@@ -230,13 +255,16 @@
       "@vaadin/vaadin-shrinkwrap": "22.1.2",
       "@vaadin/vaadin-split-layout": "22.1.0",
       "@vaadin/vaadin-tabs": "22.1.0",
+      "@vaadin/vaadin-template-renderer": "22.1.0",
       "@vaadin/vaadin-text-field": "22.1.0",
       "@vaadin/vaadin-themable-mixin": "22.1.0",
       "@vaadin/vaadin-time-picker": "22.1.0",
       "@vaadin/vaadin-upload": "22.1.0",
+      "@vaadin/vaadin-usage-statistics": "2.1.2",
       "@vaadin/vaadin-virtual-list": "22.1.0",
       "@vaadin/vertical-layout": "22.1.0",
       "@vaadin/virtual-list": "22.1.0",
+      "@webcomponents/shadycss": "1.9.6",
       "construct-style-sheets-polyfill": "3.0.4",
       "date-fns": "2.29.3",
       "lit": "2.0.0"
@@ -263,6 +291,6 @@
       "workbox-precaching": "6.4.2",
       "workbox-webpack-plugin": "6.4.2"
     },
-    "hash": "a90ec55a6bb054794c0130098eab1e5df845625247330c45d014e034c0260656"
+    "hash": "1132f1e907579bd595a063bc5c82726b74dcf71a5dff31a90a504f204205c337"
   }
 }
