Only change eager mode to true

--- a/pom.xml
+++ b/pom.xml
@@ -112,9 +112,9 @@
                         </goals>
                     </execution>
                 </executions>
-<!--                <configuration>-->
-<!--                    <eagerServerLoad>true</eagerServerLoad>-->
-<!--                </configuration>-->
+                <configuration>
+                    <eagerServerLoad>true</eagerServerLoad>
+                </configuration>
             </plugin>
         </plugins>
     </build>
