--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,13 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>24.2.0.rc2</vaadin.version>
+        <vaadin.version>24.3-SNAPSHOT</vaadin.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.2</version>
+        <version>3.1.4</version>
     </parent>
 
     <repositories>
