--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,13 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>24.3.0.alpha3</vaadin.version>
+        <vaadin.version>24.3.0.alpha4</vaadin.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.4</version>
+        <version>3.2.0-RC1</version>
     </parent>
 
     <repositories>
@@ -35,12 +35,28 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+        <!-- Remove this after SB 3.2 is stable -->
+        <repository>
+            <id>spring-milestones</id>
+            <url>https://repo.spring.io/milestone/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <pluginRepositories>
         <pluginRepository>
             <id>vaadin-prereleases</id>
             <url>https://maven.vaadin.com/vaadin-prereleases</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+        <!-- Remove this after SB 3.2 is stable -->
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <url>https://repo.spring.io/milestone/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
