--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>24.3.7</vaadin.version>
+        <vaadin.version>24.4.0.alpha14</vaadin.version>
     </properties>
+    <pluginRepositories><pluginRepository><id>v</id><url>https://maven.vaadin.com/vaadin-prereleases</url></pluginRepository></pluginRepositories>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -21,6 +22,7 @@
     </parent>
 
     <repositories>
+        <repository><id>v</id><url>https://maven.vaadin.com/vaadin-prereleases</url></repository>
         <repository>
             <id>Vaadin Directory</id>
             <url>https://maven.vaadin.com/vaadin-addons</url>
