--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,13 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>24.4.1</vaadin.version>
+        <vaadin.version>24.4-SNAPSHOT</vaadin.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.6</version>
+        <version>3.3.0</version>
     </parent>
 
     <repositories>
